--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@xyflow/react": "^12.3.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -23,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -47,7 +48,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.12",
     "gh-pages": "^6.2.0",
-    "tailwindcss": "^3.4.14"
+    "jest-fetch-mock": "^3.0.3",
+    "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   }
 }
